--- a/2.functions/index.html
+++ b/2.functions/index.html
@@ -24,7 +24,7 @@
     <div class="logo__container">
       <a href="https://netology.ru/" class="logo__link"></a>
     </div>
-    <h1 class="header__title">Домашнее задание к лекции 2. «Функции»</h1>
+    <h1 class="header__title">Домашнее задание к лекции 2. Проверка «Функции»</h1>
   </header>
 </body>
 </html>
